@startuml

title __DOOR_EXERCISE's Class Diagram__\n

  namespace  {
    class BaseDoor {
    }
  }
  

  namespace  {
    class CodeProcessor {
    }
  }
  

  namespace  {
    class CodeRecorder {
    }
  }
  

  namespace  {
    interface Door {
    }
  }
  

  namespace  {
    abstract class DoorAccessory {
    }
  }
  

  namespace  {
    class FireAlarm {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  BaseDoor .up.|> Door
  CodeProcessor -up-|> DoorAccessory
  CodeRecorder -up-|> DoorAccessory
  DoorAccessory .up.|> Door
  DoorAccessory o-- Door : core
  FireAlarm -up-|> DoorAccessory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
